modules/gdscript/tests/scripts/analyzer/errors/trait_signature_mismatch.gd
class Something extends RefCounted implements SimSystem:
	func declared_func() -> bool:
		return true

trait SimSystem:
	func declared_func(value: int) -> bool

func test():
	pass
